# radnlp2024

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
results/: README
results/main_task/baseline_gemini_flash/: ret_10365351.json  ret_10376521.json  ret_10634640.json  ret_10708825.json  ret_11407659.json  ret_11566958.json  ret_11726941.json  ret_12023275.json  ret_12550658.json  ret_12646171.json  ret_12667350.json  ret_12890602.json  ret_13138120.json  ret_13248038.json  ret_13641873.json  ret_13716139.json  ret_14063477.json  ret_15532322.json  ret_1600422.json  ret_16066820.json  ret_16191878.json  ret_2318717.json  ret_241752.json  ret_2737981.json  ret_2755461.json  ret_3162670.json  ret_3462779.json  ret_4592263.json  ret_4644984.json  ret_4660316.json  ret_4724041.json  ret_4734929.json  ret_4924173.json  ret_5180986.json  ret_5764772.json  ret_5888093.json  ret_6238897.json  ret_6278112.json  ret_6688795.json  ret_6831979.json  (+6 more)
results/main_task/baseline_gemini_pro/: ret_10365351.json  ret_10634640.json  ret_10708825.json  ret_10868892.json  ret_11407659.json  ret_11566958.json  ret_11726941.json  ret_12550658.json  ret_12646171.json  ret_12667350.json  ret_12890602.json  ret_13248038.json  ret_14063477.json  ret_147290.json  ret_14841832.json  ret_15448681.json  ret_15532322.json  ret_1600422.json  ret_16066820.json  ret_16191878.json  ret_16572985.json  ret_241752.json  ret_2737981.json  ret_2755461.json  ret_3162670.json  ret_3462779.json  ret_4592263.json  (+13 more)
src/radnlp2024/: genai.py  models.py  repository.py  submission_file.py  tmp.py
(+3 files in other folders)
